--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
+        <!--Bootstrap CDN-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+        <!--Bootstrap CDN-->
         <title>Home</title>
     </head>
 
@@ -22,7 +35,79 @@
         <h2 class="result">Calculate your dog age!</h2>
         <h2 id="dogAge">0</h2>
 
-        <!-- <h2 class="result">years old in dog years!</h2> -->
+        <!--body content START-->
+        <table class="table">
+            <thead>
+
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">
+                        <div class="centerImage">
+                            <figure>
+                                <img src="https://source.unsplash.com/300x300?weed" alt="">
+                                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                            </figure>
+                        </div>
+                    </th>
+                    <td>
+                        <h3>CBD OIL FOR DOGS & CATS</h3>
+                        <ul>
+                            <li>Broad Spectrum CBD + other Cannabinoids</li>
+                            <li>Concentrated in a convenient dropper bottle</li>
+                            <li>Easily drop directly into mouth or in water/food</li>
+                            <li>Formulated specifically for Pets</li>
+                            <li>0% THC = Non Psychoactive = NO “High”</li>
+                            <li>100% Natural Ingredients</li>
+                            <li>Organic Superfoods +CBD</li>
+                            <li>Non GMO, No Gluten, No Dairy</li>
+                            <li>No Additives or Preservatives</li>
+                            <li>Manufactured in the USA</li>
+                        </ul>
+                        <hr>
+                        <ul>
+                            <li>300mg CBD for medium pets 20-60lbs</li>
+                            <li>10mg CBD per serving</li>
+                            <li>Approx. 30 servings per bottle</li>
+                            <li>Bottle size: 15ml / 0.5 ounce</li>
+                        </ul>
+
+                        <h4>$39.95</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        <div class="centerImage">
+                            <figure>
+                                <img src="https://source.unsplash.com/300x300?cannabis" alt="">
+                                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                            </figure>
+                        </div>
+                    </th>
+                    <td>
+                        <h3>CBD DOG TREATS + JOINT & MOBILITY CARE</h3>
+                        <ul>
+                            <li>Joint & Mobility Care</li>
+                            <li>100% Natural Ingredients</li>
+                            <li>Yummy Pumpkin Spice & Cinnamon Flavor</li>
+                            <li>Organic, Vegan, Superfoods</li>
+                            <li>Non GMO, No Gluten, No Dairy</li>
+                            <li>30 Treats per Bag</li>
+                        </ul>
+                        <hr>
+                        <ul>
+                            <li>300mg CBD for medium pets 20-60lbs</li>
+                            <li>10mg CBD per serving</li>
+                        </ul>
+
+                        <h4>$34.95</h4>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <!--body content START-->
+
+
         <script src="apps.js"></script>
     </body>
 
