--- a/index.html
+++ b/index.html
@@ -36,75 +36,77 @@
         <h2 id="dogAge">0</h2>
 
         <!--body content START-->
-        <table class="table">
-            <thead>
+        <div class="tableContainer">
+            <table class="table">
+                <thead>
 
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">
-                        <div class="centerImage">
-                            <figure>
-                                <img src="https://source.unsplash.com/300x300?weed" alt="">
-                                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                            </figure>
-                        </div>
-                    </th>
-                    <td>
-                        <h3>CBD OIL FOR DOGS & CATS</h3>
-                        <ul>
-                            <li>Broad Spectrum CBD + other Cannabinoids</li>
-                            <li>Concentrated in a convenient dropper bottle</li>
-                            <li>Easily drop directly into mouth or in water/food</li>
-                            <li>Formulated specifically for Pets</li>
-                            <li>0% THC = Non Psychoactive = NO “High”</li>
-                            <li>100% Natural Ingredients</li>
-                            <li>Organic Superfoods +CBD</li>
-                            <li>Non GMO, No Gluten, No Dairy</li>
-                            <li>No Additives or Preservatives</li>
-                            <li>Manufactured in the USA</li>
-                        </ul>
-                        <hr>
-                        <ul>
-                            <li>300mg CBD for medium pets 20-60lbs</li>
-                            <li>10mg CBD per serving</li>
-                            <li>Approx. 30 servings per bottle</li>
-                            <li>Bottle size: 15ml / 0.5 ounce</li>
-                        </ul>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">
+                            <div class="centerImage">
+                                <figure>
+                                    <img src="https://source.unsplash.com/300x300?weed" alt="">
+                                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                                </figure>
+                            </div>
+                        </th>
+                        <td>
+                            <h3>CBD OIL FOR DOGS & CATS</h3>
+                            <ul>
+                                <li>Broad Spectrum CBD + other Cannabinoids</li>
+                                <li>Concentrated in a convenient dropper bottle</li>
+                                <li>Easily drop directly into mouth or in water/food</li>
+                                <li>Formulated specifically for Pets</li>
+                                <li>0% THC = Non Psychoactive = NO “High”</li>
+                                <li>100% Natural Ingredients</li>
+                                <li>Organic Superfoods +CBD</li>
+                                <li>Non GMO, No Gluten, No Dairy</li>
+                                <li>No Additives or Preservatives</li>
+                                <li>Manufactured in the USA</li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>300mg CBD for medium pets 20-60lbs</li>
+                                <li>10mg CBD per serving</li>
+                                <li>Approx. 30 servings per bottle</li>
+                                <li>Bottle size: 15ml / 0.5 ounce</li>
+                            </ul>
 
-                        <h4>$39.95</h4>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <div class="centerImage">
-                            <figure>
-                                <img src="https://source.unsplash.com/300x300?cannabis" alt="">
-                                <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                            </figure>
-                        </div>
-                    </th>
-                    <td>
-                        <h3>CBD DOG TREATS + JOINT & MOBILITY CARE</h3>
-                        <ul>
-                            <li>Joint & Mobility Care</li>
-                            <li>100% Natural Ingredients</li>
-                            <li>Yummy Pumpkin Spice & Cinnamon Flavor</li>
-                            <li>Organic, Vegan, Superfoods</li>
-                            <li>Non GMO, No Gluten, No Dairy</li>
-                            <li>30 Treats per Bag</li>
-                        </ul>
-                        <hr>
-                        <ul>
-                            <li>300mg CBD for medium pets 20-60lbs</li>
-                            <li>10mg CBD per serving</li>
-                        </ul>
+                            <h4>$39.95</h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            <div class="centerImage">
+                                <figure>
+                                    <img src="https://source.unsplash.com/300x300?cannabis" alt="">
+                                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                                </figure>
+                            </div>
+                        </th>
+                        <td>
+                            <h3>CBD DOG TREATS + JOINT & MOBILITY CARE</h3>
+                            <ul>
+                                <li>Joint & Mobility Care</li>
+                                <li>100% Natural Ingredients</li>
+                                <li>Yummy Pumpkin Spice & Cinnamon Flavor</li>
+                                <li>Organic, Vegan, Superfoods</li>
+                                <li>Non GMO, No Gluten, No Dairy</li>
+                                <li>30 Treats per Bag</li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>300mg CBD for medium pets 20-60lbs</li>
+                                <li>10mg CBD per serving</li>
+                            </ul>
 
-                        <h4>$34.95</h4>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                            <h4>$34.95</h4>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <!--body content START-->
 
 
