--- a/home.html
+++ b/home.html
@@ -23,91 +23,94 @@
     </head>
 
     <body>
-        <div id="message1"></div>
-
-        <h2 id="demo-6"></h2>
-
-        <div class="center-doggieCalc">
-            <input type="number" id="dog" placeholder="Enter dog age in Human Years" required />
-            <button onClick="calcDogYear()" class="calculate">Calculate</button>
-        </div>
-
-        <h2 class="result">Calculate your dog age!</h2>
-        <h2 id="dogAge">0</h2>
-
+        <header class="header-title">
+            <h1 class="compTitle">Kanie Kandies</h1>
+            <h2 id="message1"></h2>
+            <div class="center-doggieCalc">
+                <input type="number" id="dog" placeholder="Enter dog age in Human Years" required />
+                <button onClick="calcDogYear()" class="calculate">Calculate</button>
+            </div>
+            <div class="dogCalc">
+                <h2 class="result">Calculate your dog age!</h2>
+                <h2 id="dogAge">0</h2>
+            </div>
+        </header>
         <!--body content START-->
-        <div class="tableContainer">
-            <table class="table">
-                <thead>
+        <article>
+            <main class="center-main">
+                <div class="page-table">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>
+                                    <div class="centerImage">
+                                        <figure>
+                                            <img src="https://source.unsplash.com/300x300?weed" alt="">
+                                            <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                                        </figure>
+                                    </div>
+                                </th>
+                                <td>
+                                    <h3>CBD OIL FOR DOGS & CATS</h3>
+                                    <ul>
+                                        <li>Broad Spectrum CBD + other Cannabinoids</li>
+                                        <li>Concentrated in a convenient dropper bottle</li>
+                                        <li>Easily drop directly into mouth or in water/food</li>
+                                        <li>Formulated specifically for Pets</li>
+                                        <li>0% THC = Non Psychoactive = NO “High”</li>
+                                        <li>100% Natural Ingredients</li>
+                                        <li>Organic Superfoods +CBD</li>
+                                        <li>Non GMO, No Gluten, No Dairy</li>
+                                        <li>No Additives or Preservatives</li>
+                                        <li>Manufactured in the USA</li>
+                                    </ul>
+                                    <hr>
+                                    <ul>
+                                        <li>300mg CBD for medium pets 20-60lbs</li>
+                                        <li>10mg CBD per serving</li>
+                                        <li>Approx. 30 servings per bottle</li>
+                                        <li>Bottle size: 15ml / 0.5 ounce</li>
+                                    </ul>
 
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">
-                            <div class="centerImage">
-                                <figure>
-                                    <img src="https://source.unsplash.com/300x300?weed" alt="">
-                                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                                </figure>
-                            </div>
-                        </th>
-                        <td>
-                            <h3>CBD OIL FOR DOGS & CATS</h3>
-                            <ul>
-                                <li>Broad Spectrum CBD + other Cannabinoids</li>
-                                <li>Concentrated in a convenient dropper bottle</li>
-                                <li>Easily drop directly into mouth or in water/food</li>
-                                <li>Formulated specifically for Pets</li>
-                                <li>0% THC = Non Psychoactive = NO “High”</li>
-                                <li>100% Natural Ingredients</li>
-                                <li>Organic Superfoods +CBD</li>
-                                <li>Non GMO, No Gluten, No Dairy</li>
-                                <li>No Additives or Preservatives</li>
-                                <li>Manufactured in the USA</li>
-                            </ul>
-                            <hr>
-                            <ul>
-                                <li>300mg CBD for medium pets 20-60lbs</li>
-                                <li>10mg CBD per serving</li>
-                                <li>Approx. 30 servings per bottle</li>
-                                <li>Bottle size: 15ml / 0.5 ounce</li>
-                            </ul>
+                                    <h4>$39.95</h4>
+                                    <hr>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <div class="centerImage">
+                                        <figure>
+                                            <img src="https://source.unsplash.com/300x300?cannabis" alt="">
+                                            <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                                        </figure>
+                                    </div>
+                                </th>
+                                <td>
+                                    <h3>CBD DOG TREATS + JOINT & MOBILITY CARE</h3>
+                                    <ul>
+                                        <li>Joint & Mobility Care</li>
+                                        <li>100% Natural Ingredients</li>
+                                        <li>Yummy Pumpkin Spice & Cinnamon Flavor</li>
+                                        <li>Organic, Vegan, Superfoods</li>
+                                        <li>Non GMO, No Gluten, No Dairy</li>
+                                        <li>30 Treats per Bag</li>
+                                    </ul>
+                                    <hr>
+                                    <ul>
+                                        <li>300mg CBD for medium pets 20-60lbs</li>
+                                        <li>10mg CBD per serving</li>
+                                    </ul>
 
-                            <h4>$39.95</h4>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">
-                            <div class="centerImage">
-                                <figure>
-                                    <img src="https://source.unsplash.com/300x300?cannabis" alt="">
-                                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                                </figure>
-                            </div>
-                        </th>
-                        <td>
-                            <h3>CBD DOG TREATS + JOINT & MOBILITY CARE</h3>
-                            <ul>
-                                <li>Joint & Mobility Care</li>
-                                <li>100% Natural Ingredients</li>
-                                <li>Yummy Pumpkin Spice & Cinnamon Flavor</li>
-                                <li>Organic, Vegan, Superfoods</li>
-                                <li>Non GMO, No Gluten, No Dairy</li>
-                                <li>30 Treats per Bag</li>
-                            </ul>
-                            <hr>
-                            <ul>
-                                <li>300mg CBD for medium pets 20-60lbs</li>
-                                <li>10mg CBD per serving</li>
-                            </ul>
-
-                            <h4>$34.95</h4>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <!--body content START-->
+                                    <h4>$34.95</h4>
+                                    <hr>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </main>
+        </article>
+        <!--body content END-->
 
 
         <script src="apps.js"></script>
