--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
         <header class="header-title">
             <h1 class="compTitle">Kanie Kandies</h1>
             <h2 id="message1"></h2>
+            <hr class="headLine">
             <div class="center-doggieCalc">
                 <input type="number" id="dog" placeholder="Enter dog age in Human Years" required />
                 <button onClick="calcDogYear()" class="calculate">Calculate</button>
@@ -39,7 +40,7 @@
         <article>
             <main class="center-main">
                 <div class="page-table">
-                    <table>
+                    <table class="homeTable">
                         <tbody>
                             <tr>
                                 <th>
@@ -112,6 +113,16 @@
         </article>
         <!--body content END-->
 
+        <footer class="myFooter">
+            <!--Footer Start-->
+            <div class="footerBlock">
+                <ul>
+                    <li class="noDot">Phone: 303-999-9999</li>
+                    <li class="noDot">Address: 2001 Colorado Blvd, Denver, CO 80205</li>
+                </ul>
+            </div>
+            <!--Footer Start-->
+        </footer>
 
         <script src="apps.js"></script>
     </body>
