--- a/denied.html
+++ b/denied.html
@@ -13,7 +13,9 @@
         <h1 id="deniedMessage">Hello World!</h1>
 
         <div class="center-img">
-            <img class="denied-img" src="https://source.unsplash.com/300x300?denied" alt="">
+            <img class="denied-img"
+                src="https://lh3.googleusercontent.com/proxy/PqVkpgPOa-jR8knLPLpQ3HOrDwEgAmTZH99GsqWkmkDO3gwMbUFs33q-uFSZ51FgLjbZvZXNtlFmJll7UbInoS5nmqt25I8_U0-X3Ovu5oajtRLNl5O__M2l46T0FVzNoqvsVo1XxRDSJ7CMyzOAsbfyYkXmltvuGZVpT1PSj6Ycdi1vGw-TLn8MpA5t9HV0aNE"
+                alt="">
         </div>
         <div class="center-p">
             <p>
