--- a/home.html
+++ b/home.html
@@ -45,10 +45,7 @@
                             <tr>
                                 <th>
                                     <div class="centerImage">
-                                        <figure>
-                                            <img src="https://source.unsplash.com/300x300?weed" alt="">
-                                            <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                                        </figure>
+                                        <img src="images/cbd_1.png" alt="cbd oil">
                                     </div>
                                 </th>
                                 <td>
@@ -80,10 +77,7 @@
                             <tr>
                                 <th>
                                     <div class="centerImage">
-                                        <figure>
-                                            <img src="https://source.unsplash.com/300x300?cannabis" alt="">
-                                            <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
-                                        </figure>
+                                        <img class="imgTwo" src="images/cbd_3.PNG" alt="cbd oil">
                                     </div>
                                 </th>
                                 <td>
