--- a/home.html
+++ b/home.html
@@ -35,6 +35,12 @@
                 <h2 class="result">Calculate your dog age!</h2>
                 <h2 id="dogAge">0</h2>
             </div>
+            <!--Carousel StART-->
+            <div class="carousel-center">
+                <img id="carousel-image">
+                <img id="carousel-image1">
+            </div>
+            <!--Carousel END-->
         </header>
         <!--body content START-->
         <article>
