--- a/denied.html
+++ b/denied.html
@@ -13,9 +13,7 @@
         <h1 id="deniedMessage">Hello World!</h1>
 
         <div class="center-img">
-            <img class="denied-img"
-                src="https://lh3.googleusercontent.com/proxy/PqVkpgPOa-jR8knLPLpQ3HOrDwEgAmTZH99GsqWkmkDO3gwMbUFs33q-uFSZ51FgLjbZvZXNtlFmJll7UbInoS5nmqt25I8_U0-X3Ovu5oajtRLNl5O__M2l46T0FVzNoqvsVo1XxRDSJ7CMyzOAsbfyYkXmltvuGZVpT1PSj6Ycdi1vGw-TLn8MpA5t9HV0aNE"
-                alt="">
+            <img src="images/my_denied.jpg" style="width: 400px;">
         </div>
         <div class="center-p">
             <p>
@@ -23,11 +21,6 @@
                 impedit, cupiditate magni eum veritatis quo maiores voluptatem sint quam cumque repellat et saepe?
                 Incidunt accusantium atque quo vitae praesentium ducimus recusandae quis ut, magni enim quod facere
                 tempore dolores ab esse debitis accusamus, provident, totam ex? Provident aperiam, quia nam suscipit
-                earum mollitia.
-                Adipisci ut natus eaque ipsum, magnam sed voluptates rem dolores earum quibusdam eveniet dolore non
-                pariatur amet quaerat, tempora minima rerum praesentium error dolor aliquid maiores laudantium.
-                Necessitatibus, facere inventore.
-
             </p>
         </div>
 
