--- a/home.html
+++ b/home.html
@@ -35,10 +35,11 @@
                 <h2 class="result">Calculate your dog age!</h2>
                 <h2 id="dogAge">0</h2>
             </div>
+            <hr class="headLine">
             <!--Carousel StART-->
             <div class="carousel-center">
                 <img id="carousel-image">
-                <img id="carousel-image1">
+                <!-- <img id="carousel-image1"> -->
             </div>
             <!--Carousel END-->
         </header>
