--- a/home.html
+++ b/home.html
@@ -36,6 +36,13 @@
                 <h2 id="dogAge">0</h2>
             </div>
             <hr class="headLine">
+            <!-- navigation menu START -->
+            <nav class="my-nav">
+                <a class="nav-menu" href="home.html">Home</a>
+                <a class="nav-menu" href="fortune.html">Fortune Teller</a>
+            </nav>
+            <!-- navigation menu END -->
+
             <!--Carousel StART-->
             <div class="carousel-center">
                 <img id="carousel-image">
