dosage added to homepage

--- a/home.html
+++ b/home.html
@@ -37,12 +37,21 @@
             </div>
             <hr class="headLine">
 
-            <!--Carousel StART-->
+            <!--Carousel and Dosage StART-->
+            <div class="centerDosage">
+                <h2>Doggie CBD dosage!</h2>
+            </div>
             <div class="carousel-center">
                 <img id="carousel-image">
                 <!-- <img id="carousel-image1"> -->
+                <img class="dosagePic" src="images/dosagePic.PNG">
+                <div class="dosageStyle">
+                    <p id="myDosage"></p>
+                    <p id="myDosageTwo"></p>
+                    <p id="myDosageThree"></p>
+                </div>
             </div>
-            <!--Carousel END-->
+            <!--Carousel and Dosage END-->
 
             <!-- navigation menu START -->
             <nav class="my-nav">
