everything work, final push

--- a/home.html
+++ b/home.html
@@ -58,14 +58,24 @@
                         </div>
                         <img class="dosagePic" src="images/dosagePic.PNG">
                         <div class="col card-two">
+                            <h1 class="dosage-h1">Use the legend on the left to measure dosage!</h1>
                             <h2 class="dosage-header">Small Dog 5 - 35lb</h2>
-                            <button class="btn_css" onclick="smalDog()">Learn More</button>
+                            <div class="btn-row">
+                                <button class="btn_css" onclick="smalDog()">Learn More</button>
+                                <button class="btn_css" onclick="smalDogClear()">Clear</button>
+                            </div>
                             <p id="myDosage"></p>
                             <h2 class="dosage-header">Medium Dog 35 - 75lb</h2>
-                            <button class="btn_css" onclick="medDog()">Learn More</button>
+                            <div class="btn-row">
+                                <button class="btn_css" onclick="medDog()">Learn More</button>
+                                <button class="btn_css" onclick="medDogClear()">Clear</button>
+                            </div>
                             <p id="myDosageTwo"></p>
                             <h2 class="dosage-header">Large Dog 75lb +</h2>
-                            <button class="btn_css" onclick="largDog()">Learn More</button>
+                            <div class="btn-row">
+                                <button class="btn_css" onclick="largDog()">Learn More</button>
+                                <button class="btn_css" onclick="largDogClear()">Clear</button>
+                            </div>
                             <p id="myDosageThree"></p>
                         </div>
 
