website now responsive, last push

--- a/denied.html
+++ b/denied.html
@@ -10,19 +10,22 @@
     </head>
 
     <body>
-        <h1 id="deniedMessage">Hello World!</h1>
+        <div class="denied-box">
+            <h1 id="deniedMessage">Hello World!</h1>
 
-        <div class="center-img">
-            <img src="images/my_denied.jpg" style="width: 400px;">
+            <div class="center-img">
+                <img class="den-img" src="images/my_denied.jpg" style="width: 300px;">
+            </div>
+            <div class="center-p">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum amet, ea totam quas earum nisi. Modi
+                    impedit, cupiditate magni eum veritatis quo maiores voluptatem sint quam cumque repellat et saepe?
+                    Incidunt accusantium atque quo vitae praesentium ducimus recusandae quis ut, magni enim quod facere
+                    tempore dolores ab esse debitis accusamus, provident, totam ex? Provident aperiam, quia nam suscipit
+                </p>
+            </div>
         </div>
-        <div class="center-p">
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum amet, ea totam quas earum nisi. Modi
-                impedit, cupiditate magni eum veritatis quo maiores voluptatem sint quam cumque repellat et saepe?
-                Incidunt accusantium atque quo vitae praesentium ducimus recusandae quis ut, magni enim quod facere
-                tempore dolores ab esse debitis accusamus, provident, totam ex? Provident aperiam, quia nam suscipit
-            </p>
-        </div>
+
 
         <script src="denied.js"></script>
     </body>
